change dashboard page color

--- a/src/client/components/DashboardPageComponents/Dates.css
+++ b/src/client/components/DashboardPageComponents/Dates.css
@@ -3,7 +3,7 @@
     
     padding: 0px 5px;
     font-size: 14px;
-   color:#E9E9E9;
+   color:black;
     background-color: transparent; /* Adjust the font size as desired */
     /* Add any other styles you want, like border, background, etc. */
   }
