--- a/src/client/components/DashboardPageComponents/DataMap.css
+++ b/src/client/components/DashboardPageComponents/DataMap.css
@@ -1,32 +1,38 @@
 #leaflet-container {
-    background-color:rgba(255,0,0,0.0);
-    /* background-color: aquamarine; */
+  background-color: rgba(255, 0, 0, 0);
+  /* background-color: aquamarine; */
 }
-
 .leaflet-tooltip.map-label {
-    background: transparent; 
-    border: none;
-     box-shadow: none; 
-    color: #e3e3e3; /* Text color */
-  }
+  background: transparent;
+  border: none;
+  box-shadow: none;
+  font-size: 8px;
+  color: #21212160; /* Text color */
+}
+.click-part{
+  font-size: 20px;
+  color: #212121;
+}
+/* .leaflet-tooltip.map-label:hover {
+  background: transparent;
+  border: none;
+  box-shadow: none;
+  color: #21212160;
+} */
 
-  .leaflet-tooltip.my-custom-tooltip{
-    background-color:rgba(255,0,0,0.0);
-    border:none;
-    box-shadow: none;
-    color: #e3e3e3;
-    
-  }
- 
-  
-
-  .leaflet-tooltip.my-custom-tooltip::before, 
-.leaflet-tooltip::before {
-    border: none !important;
-    background: transparent !important;
-    content: none !important;
+.leaflet-tooltip.my-custom-tooltip {
+  background-color: rgba(255, 0, 0, 0);
+  border: none;
+  box-shadow: none;
+  color: #212121;
 }
 
+.leaflet-tooltip.my-custom-tooltip::before,
+.leaflet-tooltip::before {
+  border: none !important;
+  background: transparent !important;
+  content: none !important;
+}
 
 /* citylayer marker css */
 
@@ -38,7 +44,4 @@
   font-size: 14px;
   font-weight: bold;
   color: white; */
- 
-  
- 
 }
