fix: map and layout update

--- a/src/client/components/DashboardPageComponents/DataMap.css
+++ b/src/client/components/DashboardPageComponents/DataMap.css
@@ -7,7 +7,7 @@
   border: none;
   box-shadow: none;
   font-size: 8px;
-  color: #21212160; /* Text color */
+  color: #212121; /* Text color */
 }
 .click-part{
   font-size: 20px;
